<resources>
    <string name="app_name">Shot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="overview">Overview</string>
    <string name="log">Log</string>
    <string name="log2">log</string>
    <string name="log3">log</string>
    <string name="AddShotMessage">A shot added!</string>
    <string name="RemoveShotMessage">A shot is removed.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="Warn">!</string>
    <string name="SeagullMessage">Qualcuno sta garrendo!?</string>
    <string name="UserRecord">user record:</string>
    <string name="Record">record</string>
    <string name="TopicNotification">pushNotifications</string>
    <string name="flamingo_s_record">Flamingo\'s record:</string>
    <string name="_0">0</string>
    <string name="error_message">Something went wrong. Sculo.</string>
</resources>
