<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/overview_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.v7.widget.CardView
            android:id="@+id/Snapshot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/UserSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:foregroundGravity="center_vertical|center"
                    android:padding="8dp"
                    app:cardCornerRadius="@dimen/fab_margin">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/UserLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/flamingo_s_record"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/UserRecord"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/Record"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/activity_horizontal_margin"/>
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/ComplexSummary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_toEndOf="@+id/UserSummary"
                    android:backgroundTint="@color/colorPrimary"
                    android:padding="8dp"
                    app:cardCornerRadius="@dimen/fab_margin">

                    <ListView
                        android:id="@+id/SummaryList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:clickable="false"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:contextClickable="false"
                        android:padding="8dp"
                        android:scrollbars="none" />

                </android.support.v7.widget.CardView>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/Buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/AddFrame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_vertical|center_horizontal|center"
                    android:padding="8dp"
                    app:backgroundTint="@android:color/transparent">

                    <TextView
                        android:id="@+id/plus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/plus"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:textSize="40sp"
                        android:translationZ="10dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/AddShotButton"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:clickable="true"
                        android:elevation="16dp"
                        android:focusable="true"
                        android:textColor="@android:color/white"
                        app:backgroundTint="@color/colorPrimary" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/RemoveFrame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical|center_horizontal|center"
                    android:padding="8dp"
                    app:backgroundTint="@android:color/transparent">

                    <TextView
                        android:id="@+id/minus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/minus"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:textSize="40sp"
                        android:translationZ="10dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/RemoveShotButton"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:clickable="true"
                        android:elevation="16dp"
                        android:focusable="true"
                        android:textColor="@android:color/white"
                        app:backgroundTint="@color/colorPrimary" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/SeagullFrame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_vertical|center_horizontal|center"
                    android:padding="8dp"
                    app:backgroundTint="@android:color/transparent">

                    <TextView
                        android:id="@+id/Seagull"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical|center_horizontal|center"
                        android:gravity="center"
                        android:text="@string/Warn"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:textSize="40sp"
                        android:translationZ="10dp" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/SeagullButton"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:clickable="true"
                        android:elevation="16dp"
                        android:focusable="true"
                        android:textColor="@android:color/white"
                        app:backgroundTint="@color/colorPrimary" />

                </FrameLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>